address buttons and fix z-index bug

--- a/public/css/style.concat.css
+++ b/public/css/style.concat.css
@@ -24,7 +24,8 @@ ORDER: Base + typography > general layout + grid > page layout > components
 
 html {
   font-size: 62.5%;
-  height: 100%; }
+  height: 100%;
+  scroll-behavior: smooth; }
   @media only screen and (max-width: 75em) {
     html {
       font-size: 56.25%; } }
@@ -170,10 +171,11 @@ p {
       @media only screen and (min-width: 112.5em) {
         .hero--phrase__strong {
           font-size: 8rem; } }
-  .hero__btn {
+  .hero__btn, .hero__btn:link, .hero__btn:visited {
     align-self: center;
     justify-self: center;
-    margin-bottom: 3rem; }
+    margin-bottom: 3rem;
+    cursor: pointer; }
 
 .btn, .btn:link, .btn:visited {
   display: inline-block;
@@ -191,15 +193,15 @@ p {
 .btn:active {
   border-bottom-color: currentColor; }
 
-.btn__primary {
+.btn__primary, .btn__primary:link, .btn__primary:visited {
   background-color: #ABC0DA;
   border-bottom: 1px solid #ABC0DA;
   color: #07274e; }
-  .btn__primary:hover {
+  .btn__primary:hover, .btn__primary:link:hover, .btn__primary:visited:hover {
     background-color: #07274e;
     color: #ffffff; }
 
-.btn__small {
+.btn__small, .btn__small:link, .btn__small:visited {
   font-size: 1.8rem;
   padding: 0 3rem; }
 
@@ -281,6 +283,7 @@ p {
   text-align: center;
   margin: 8rem auto;
   max-width: 80rem;
+  position: relative;
   z-index: 2; }
   @media only screen and (max-width: 37.5em) {
     .about {
