--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -76,8 +76,14 @@
   }
 
   &__btn {
-    align-self: center;
-    justify-self: center;
-    margin-bottom: 3rem;
+
+    &,
+    &:link,
+    &:visited {
+      align-self: center;
+      justify-self: center;
+      margin-bottom: 3rem;
+      cursor: pointer;
+    }
   }
 }
